--- a/SistemaReservaHotel/nbproject/project.properties
+++ b/SistemaReservaHotel/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaReservaHotel
 excludes=
+file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\ThinkPad\\Documents\\Electiva lunes miercoles\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.49-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
